src/objects/Question_Choice_Selection__c.object
<CustomObject>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Scorecard_Answer__r.Scorecard__r.RARE_Campaign__r.Program__r.Name</formula>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Choice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Choice</label>
        <referenceTo>Question_Choice__c</referenceTo>
        <relationshipLabel>Question Choices Selections</relationshipLabel>
        <relationshipName>Question_Choices_Selections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RARE_Campaign__c</fullName>
        <formula>Scorecard_Answer__r.Scorecard__r.RARE_Campaign__r.Name</formula>
        <label>RARE Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scorecard_Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard Answer</label>
        <referenceTo>Scorecard_Answer__c</referenceTo>
        <relationshipLabel>Question Choices Selections</relationshipLabel>
        <relationshipName>Question_Choices_Selections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scorecard_Date__c</fullName>
        <formula>Scorecard_Answer__r.Scorecard__r.Due_Date__c</formula>
        <label>Scorecard Date</label>
        <type>Date</type>
    </fields>
    <label>Question Choice Selection</label>
    <nameField>
        <displayFormat>QCS-{000000}</displayFormat>
        <label>Question Choice Selection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Choices Selections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>